Remove reflection of SDK_INT in unit tests by creating a new AndroidBuildInfo helper object providing that info (#363)